--- a/apps/http_backend/package.json
+++ b/apps/http_backend/package.json
@@ -2,11 +2,14 @@
   "name": "latent_http_backend",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "dependencies": {
+    "express": "^4.21.2"
   },
-  "devDependencies":{
-    "@repo/eslint-config": "workspace:*"
+  "scripts": {
+    "test": "Vitest"
+  },
+  "devDependencies": {
+    "@repo/typescript-config":"workspacce*"
   },
   "keywords": [],
   "author": "",
